--- a/TrinhTest/Pages/Shared/_Layout.cshtml
+++ b/TrinhTest/Pages/Shared/_Layout.cshtml
@@ -12,25 +12,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrinhTest</title>
     <link href='/css/site.css' rel="stylesheet" />
-    <script src="/js/Preload/basket.min.js"></script>
-    <script src="/js/Preload/preload.js"></script>
-    <script src="/js/Common/initialize_setting.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <script src="/Assests/js/ajax.min.js" type="text/javascript"></script>
-@*    <link href="/css/master1.css" rel="stylesheet" />
-    <script>css_require("/css/text_editor.css")</script>
-    <script>css_require("/css/button.css")</script>*@
     <script src="/Assets/js/core/bootstrap.js"></script>
-    <script src="/js/Common/KeepAlive.js"></script>
-    <script src="/js/Common/Popup.js"></script>
-    <script src="/js/Common/Datetime.js"></script>
-    <script src="/js/Common/noti_function.js"></script>
-    <script src="/js/Common/countup.min.js"></script>
-    <script src="/js/Common/Common.js"></script>
+    <script src="/js/site.js"></script>
     <script src="/lib/jquery-validation/dist/semantic.min.js"></script>
     <script src="/Assets/js/plugins/datatables.js"></script>
     <script src='/Assests/dist/Paginationjs/paginationjs.min.js'></script>
@@ -199,7 +188,6 @@
         </div>
         @await RenderSectionAsync("Scripts", required: false)
         <script src="/Assests/dist/signalr/dist/browser/signalr.js"></script>
-        <script src="/js/Common/LoadLanguages_Packege.js"></script>
          <script src="/Assests/dist/components/visibility.js"></script>
       <script src="/Assests/dist/components/visibility.min.js"></script>
 <script>
