--- a/TrinhTest/Pages/Dash/EditMater.cshtml
+++ b/TrinhTest/Pages/Dash/EditMater.cshtml
@@ -2,6 +2,8 @@
 @{
     Layout = null;
 }
+@Html.AntiForgeryToken()
+<script src="/js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-3 px-0 ">
     <div class="row">
         <div class="col-12">
