--- a/TrinhTest/Pages/Error/Error404.cshtml
+++ b/TrinhTest/Pages/Error/Error404.cshtml
@@ -17,11 +17,11 @@
                     <div class="col-lg-6 my-auto">
                         <h1 class="display-1 text-bolder text-gradient text-danger">Error 404</h1>
                         <h2>Erm. Page not found</h2>
-                        <p class="lead">We suggest you to go to the homepage while we solve this issue.</p>
-                        <button type="button" class="btn bg-gradient-dark mt-4" onclick="ErronrGoHome()">Go to Homepage</button>
+                        <a class="goback" onclick="ErronrGoHome()">Go Back</a>
+                        <a href="~/Login/Login">Go To Homepage</a>
                     </div>
                     <div class="col-lg-6 my-auto position-relative">
-                        <img class="w-100 position-relative" src="../../../assets/img/illustrations/error-404.png" alt="404-error">
+                        <img class="w-100 position-relative" src="Assets/img/illustrations/error-404.png" alt="404-error">
                     </div>
                 </div>
             </div>
@@ -85,6 +85,7 @@
 $<script>
 function ErronrGoHome() {
     let userId=localStorage.getItem("X-UserID");
+    window.history.back();
    window.location.href="@Url.Action("DashBoards", "Home")"+"?CurrentID="+window.btoa(userId);
 }
 </script>
