--- a/TrinhTest/Pages/Login/User.cshtml
+++ b/TrinhTest/Pages/Login/User.cshtml
@@ -2,6 +2,8 @@
 @{
     Layout = null;
 }
+@Html.AntiForgeryToken()
+<script src="/js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-3 px-0">
     <div class="row">
         <div class="col-12">
@@ -52,6 +54,9 @@
     </div>
 </div>
 <script type="text/javascript">
+    if (window.performance) {
+   // alert("window.performance works fine on this browser");
+}
      $(document).ready(function () { 
          LoadDataUser();
           if (document.getElementById('status1')) {
@@ -60,8 +65,7 @@
         }
      });
     function LoadDataUser() {
-        $.ajax({
-                url: '/api/User/LoadUser',
+        $.ajax({url: '/api/User/LoadUser',
                 type: 'POST',
                 data: JSON.stringify({
                 'UserID':""
@@ -78,6 +82,7 @@
                             callback: function (res, pagination) {
                                 UserRenderList(res,"dtContentEditUserBody");
                                 notiSuccess();
+                                Checking_TabControl_Permission();
                             }
                         });
                     }
@@ -99,15 +104,15 @@
                     let tr =
                         '<td class="d-none">' + item.UserID + '</td>'
                         + '<td class="vt-number-order"></td>'
-                        + '<td>'
+                        + '<td class="d-flex justify-content-center">'
                         + '<div class="icon icon-shape icon-sm me-2 text-center" >'
                         + '<img class="avatar mt-2" src="/Assets/img/'+item.Image+'" alt="label-image">'
                         + '</div>'
                         +'</td>'
                         + '<td><a href="#" class="text-decoration-underline fw-bold buttonEditClass">' + item.UserName + '</a></td>'
                         + '<td>' + item.Role + '</td>'
-                        + '<td>' + item.PhoneNumber + '</td>'
-                        + '<td data-name="address">' + item.Address + '</td>'
+                        + '<td data-name="phone" class="_tab_control_" data-tab="phone_customer">' + item.Phone + '</td>'
+                        + '<td class="_tab_control_" data-tab="address_customer">' + item.Address + '</td>'
                         + '<td>' + item.Email + '</td>'
                         +'<td data-name="is_show_app">'
                         + ((1 === 1)
@@ -122,11 +127,4 @@
             document.getElementById(id).innerHTML = stringContent;
         }
     }
-
-    // document.getElementById(id+"Prev").addEventListener("click", function() { 
-    //         RemoveClassActive(ele,3,id);
-    //    });
-    //document.getElementById(id+"Next").addEventListener("click", function() {
-    //    RemoveClassActive(ele,3,id);
-    //});
 </script>
