--- a/TrinhTest/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Pages/Dash/Dash_Master.cshtml
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-sm-3">
+                <div class="col-sm-3">
                     <div class="card  mb-4">
                         <div class="card-body p-3">
                             <div class="row">
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-sm-3">
+                <div class="col-sm-3">
                     <div class="card  mb-4">
                         <div class="card-body p-3">
                             <div class="row">
@@ -118,263 +118,17 @@
 <script src="/Assets/js/plugins/orbit-controls.js"></script>
 <script src="/js/Common/initialize_setting.js"></script>
 <script type="text/javascript">
-    var MasterDataMenu = [
-          {
-              "Name":"Dashboards"
-              ,"Img":"fa fa-tachometer",
-              "child":[
-                  {"Name":"Role"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":"/Login/User"
-                  }
-                  ,{"Name":"EditRole"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":"/Dash/EditMater"
-                  },
-                  {"Name":"Chats"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":"/Chat/ChatBots"
-                  }
-              ]
-          },
-          {
-              "Name":"Doctor"
-              ,"Img":"fa fa-user-md",
-              "child":[
-                  {"Name":"Chats"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":"/Products/Products"
-                  }
-                  ,{"Name":"Calendar Schedule"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"All Projects"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Account"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Security"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-              ]
-          },
-          {
-              "Name":"Patient"
-              ,"Img":"fa fa-users"
-              ,"child":[
-                  {
-                      "Name":"Kanban"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"Wizard"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"DataTables"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-              ]
-          },
-          {
-              "Name":"Nurse"
-              ,"Img":"fa fa-user-md"
-              ,"child":[
-              ]
-          }
-          ,{
-              "Name":"Pharmacist"
-              ,"Img":"fa fa-graduation-cap"
-              ,"child":[
-                 {
-                      "Name":"Products"
-                      ,"ChildNode":[
-                          {
-                            "Name":"New Product"
-                            ,"ChildNode":[]
-                            ,"Url":"@Url.Action("Chat","ChatBots")"
-                          }
-                          ,{
-                            "Name":"Edit Product"
-                            ,"ChildNode":[]
-                            ,"Url":"@Url.Action("Chat","ChatBots")"
-                          }
-                          ,{
-                            "Name":"Product Page"
-                            ,"ChildNode":[]
-                            ,"Url":"@Url.Action("Chat","ChatBots")"
-                          }
-                      ]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"Orders"
-                      ,"ChildNode":[
-                         {
-                            "Name":"Order List"
-                            ,"ChildNode":[]
-                            ,"Url":""
-                          }
-                          ,{
-                            "Name":"Order Details"
-                            ,"ChildNode":[]
-                            ,"Url":""
-                          }
-                          ,{
-                            "Name":"Order Trinh"
-                            ,"ChildNode":[]
-                            ,"Url":""
-                          }
-                      ]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"Referral"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-              ]
-          }
-          ,{
-              "Name":"Laboratorist"
-              ,"Img":"fa fa-flask"
-              ,"child":[]
-          }
-          ,{
-              "Name":"Appointment"
-              ,"Img":"fa fa-calendar-plus-o"
-              ,"child":[]
-          }
-          ,{
-              "Name":"Payment"
-              ,"Img":"fa fa-money"
-              ,"child":[]
-          }
-           ,{
-              "Name":"Blood Bank"
-              ,"Img":"fa fa-university"
-              ,"child":[]
-          }
-          ,{
-              "Name":"Medicine"
-              ,"Img":"fa fa-medkit"
-              ,"child":[]
-          }
-          ,{
-              "Name":"Report"
-              ,"Img":"fa fa-flag"
-              ,"child":[
-                  {
-                      "Name":"Operation Report"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"Birth Report"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"Death Report"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"Default"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-              ]
-          }
-          ,{
-              "Name":"Settings"
-              ,"Img":"fa fa-cogs"
-              ,"child":[
-                  {
-                      "Name":"Noticeboard"
-                      ,"ChildNode":[]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  ,{
-                      "Name":"Rom"
-                      ,"ChildNode":[
-                          {
-                            "Name":"Bed Allotment"
-                            ,"ChildNode":[]
-                            ,"Url":""
-                          }
-                          ,{
-                            "Name":"Manufacture"
-                            ,"ChildNode":[]
-                            ,"Url":""
-                          }
-                      ]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-                  
-                  ,{
-                      "Name":"Services"
-                      ,"ChildNode":[
-                         {
-                            "Name":"Price"
-                            ,"ChildNode":[]
-                            ,"Url":"/Setting/Services/SettingPriceServices"
-                          }
-                          ,{
-                            "Name":"Order Details"
-                            ,"ChildNode":[]
-                            ,"Url":""
-                          }
-                          ,{
-                            "Name":"Order Trinh"
-                            ,"ChildNode":[]
-                            ,"Url":""
-                          }
-                      ]
-                      ,"Img":""
-                      ,"Url":""
-                  }
-              ]
-          }]
+
     const iconNavbarSidenav = document.getElementById('iconNavbarSidenav');
     const iconSidenav = document.getElementById('iconSidenav');
     const sidenav = document.getElementById('sidenav-main');
     let body = document.getElementsByTagName('body')[0];
     let className = 'g-sidenav-pinned';
     $(document).ready(function (){
+        LoadDataMenu();
         ShowMenuMater();
         CloseMneuMater();
         LoadDataUser();
-       LoadMenuMater("sidenav-collapse-main");
-         eleClickMenuDash();
         LoadDataPriceServices();
         LoadTempMedicineReport();
     });
@@ -401,20 +155,23 @@
      // execute click child node menu dash
     function eleClickMenuDash(){
          $("#collapse_Dashboards").addClass('show');
-         //$("#parent_Dashboards").children(0).addClass('bg-gradient-light');
          $("#parent_Dashboards").children()[0].classList.add('bg-gradient-light');
         var ele=document.querySelectorAll('.settingCollapse');
         ele.forEach((node) => {
             node.addEventListener("click", e => {
-            if($("#collapse_"+e.target.children[1].innerText).hasClass("show")){
-                $("#collapse_"+e.target.children[1].innerText).removeClass("show");
+                let countClick=0;
+                if(e.target.children[1] != undefined){
+                    countClick=1;
+                }
+            if($("#collapse_"+e.target.children[countClick].innerText).hasClass("show")){
+                $("#collapse_"+e.target.children[countClick].innerText).removeClass("show");
                 document.getElementById(e.target.id).setAttribute("aria-expanded", false);
                 e.target.querySelector('div').classList.remove("bg-gradient-light");
             }
             else
                 {
                     document.getElementById(e.target.id).setAttribute("aria-expanded", true);
-                    $("#collapse_"+e.target.children[1].innerText).addClass("show");
+                    $("#collapse_"+e.target.children[countClick].innerText).addClass("show");
                     e.target.querySelector('div').classList.add("bg-gradient-light");
                 }
             })
@@ -464,13 +221,31 @@
          if ($('#accountDetail').form('is valid')) {
          }
     }
+    function LoadDataMenu(){
+         AjaxLoad(url = "/api/Mater/LoadDataMenu"
+            , data = {
+            }, async = true
+           , error = function () { notiError_SW(); }
+            , success = function (result) {
+                if (result != "") {
+                    let data=JSON.parse(result);
+                    console.log(data);
+                     RenderDataMenuMater(data,"sidenav-collapse-main");
+                     eleClickMenuDash();
+                    notiSuccess();
+                }
+                else{
+                    notiError_SW();
+                }
+            });
+    }
     ///
-    function LoadMenuMater(id){
+    function RenderDataMenuMater(data,id){
         let stringContent = '';
-        for(let i=0;i<MasterDataMenu.length;i++){
-            let item=MasterDataMenu[i];
+        for(let i=0;i<data.length;i++){
+            let item=data[i];
             let replaceDataCollapse='';
-            if(item.child.length >0){
+            if(item.Childs.length >0){
                 replaceDataCollapse='data-bs-toggle="collapse" aria-controls='+item.Name+' role="button" aria-expanded="false"'
             }
             let tr ='<li class="nav-item settingCollapse">'
@@ -480,28 +255,30 @@
                     +'</div>'
                     +'<span class="text-dark">'+item.Name+'</span>'
                     +'</a>'
-                    + LoadChildMasterMenu(item.child,item.Name)
+                    + RenderDataChildMasterMenu(item.Childs,item.Name)
                     +'</li>';
           stringContent=stringContent+tr;
         }
          document.getElementById(id).innerHTML = stringContent;
     }
-    function LoadChildMasterMenu(dataChild,id){
+    function RenderDataChildMasterMenu(dataChild,id){
         let resulf  = '';
         if(dataChild.length >0){
+            console.log(id)
             let tr ='<div class="collapse" id=collapse_'+id+'>'
                      +'<ul class="nav ms-2 ps-3 me-2">'
             for(let i=0;i<dataChild.length;i++){
-                 let coll='';
-                 if(dataChild[i].ChildNode.length>0){
-                     coll='data-bs-toggle="collapse"'
-                 }
                 var item=dataChild[i];
+                 let coll='href="' + item.Url + '"';
+                 if(dataChild[i].ChildNode.length>0){
+                     coll='data-bs-toggle="collapse" href="#"'
+                 }
+
                 tr += '<li class="nav-item cursor-pointer">'
-                    +'<a class="nav-link Settingitem__item"'+coll+' href="' + item.Url + '" id="Layout_'+item.Name+'">'
+                    +'<a class="nav-link Settingitem__item"'+coll+'id="Layout_'+item.Name+'">'
                     +'<span class="sidenav-normal">'+item.Name+'</span>'
                     +'</a>'
-                    +LoadChildMasterMenu(dataChild[i].ChildNode,item.Name)
+                    +RenderDataChildMasterMenu(dataChild[i].ChildNode,item.Name)
                     +'</li>'
             }
             resulf=resulf+tr+'</ul>'+'</div>';
