--- a/TrinhTest/Pages/Login/ChangePassword.cshtml
+++ b/TrinhTest/Pages/Login/ChangePassword.cshtml
@@ -2,6 +2,8 @@
 @{
     Layout = null;
 }
+<script src="/Assets/js/plugins/multistep-form.js"></script>
+ <script src="/js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-4">
     <div class="row">
         <div class="col-12">
@@ -20,14 +22,23 @@
                 <div class="row">
                     <div class="col-12 col-lg-8 m-auto">
                         <form class="multisteps-form__form mb-8" style="height: 395px;">
-                            <div class="card multisteps-form__panel p-3 border-radius-xl bg-white js-active" id="formChageEmail" data-animation="FadeIn">
+                            <div class="multisteps-form__panel p-3 border-radius-xl bg-white js-active" id="formChageEmail" data-animation="FadeIn">
                                 <h5 class="font-weight-bolder mb-0">Email</h5>
                                 <p class="mb-0 text-sm">Mandatory informations</p>
                                 <div class="multisteps-form__content">
-                                    <div class="row mt-3">
-                                        <div class="col-12">
-                                            <label>Email</label>
-                                            <input class="multisteps-form__input form-control" id="inputChageEmail" type="text" placeholder="Email User">
+                                    <div class="row mt-3 form3" id="formEmail">
+                                        <div class="field col-12 p-1">
+                                            <label data-languagestatic="Email">Email</label>
+                                             <input class="multisteps-form__input form-control" name="emailValidate" type="email" placeholder="Eg. soft@dashboard.com">
+                                        </div>
+                                    </div>
+                                    <div class="fixed-botombutton mt-3">
+                                        <div class="action_Save">
+                                            <div class="text-danger text-gradient text-sm font-weight-bold" data-languagedyn="textShowMessage" id="textShowMessage"></div>
+                                            <div class="action_Save-Content">
+                                                <button data-languagestatic="button_cancel" class="btn btn-secondary" form="formSignIn" onclick="event.preventDefault();return CloseModal()">Cancel</button>
+                                                <button data-languagestatic="button_ok" id="ChangePassSendMail" type="button" class="btn bg-gradient-primary mt-2 me-2 _tab_control_" data-tab="edit_tab_customer" onclick="event.preventDefault(); SendMail()">Send Mail</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -60,7 +71,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center">
-                                        <button type="button" class="btn bg-gradient-warning w-100">Send code</button>
+                                        <button type="button" class="btn bg-gradient-warning w-100" onclick="event.preventDefault(); resetPassword()">Send code</button>
                                     </div>
                                 </div>
                             </div>
@@ -71,39 +82,46 @@
         </div>
     </div>
 </div>
+<script src="/Assets/js/custom-validation.js"></script>
 <script type="text/javascript">
     var num=0;
      $(document).ready(function () {
-         
-         $('#inputChageEmail').on('change', function (e) {
-             //SendMail($('#inputChageEmail').val());
-            $("#ChagePass_ShowOTP").addClass("js-active");
-            $("#formChageEmail").removeClass("js-active");
-            $("#formChageOTP").addClass("js-active");
-            setTimeout(TimeOutOTP, 5000);
-        });
+
+        // $('#inputChageEmail').on('change', function (e) {
+        //     //SendMail($('#inputChageEmail').val());
+        //    $("#ChagePass_ShowOTP").addClass("js-active");
+        //    $("#formChageEmail").removeClass("js-active");
+        //    $("#formChageOTP").addClass("js-active");
+        //    setTimeout(TimeOutOTP, 5000);
+        //});
      });
-     function SendMail(value){
-         AjaxApi(url = "/api/Author/SendMail?emailUser="+value
-            ,data= JSON.stringify({
-            })
-            ,async = true
-            , error = function () { notiError_SW() }
-            , success = function (result) {
-                        $("#ChagePass_ShowOTP").addClass("js-active");
-                        $("#formChageEmail").removeClass("js-active");
-                        $("#formChageOTP").addClass("js-active");
-                        resetPassword();
-            }
-            , before = function (e) {
-                if(e.responseText=="1"){
-                    num=e.responseText;
-                        $("#ChagePass_ShowOTP").addClass("js-active");
-                        $("#formChageEmail").removeClass("js-active");
-                        $("#formChageOTP").addClass("js-active");
-                    }
-             }
-        );
+     function SendMail(){
+        $('#formEmail').form('validate form');
+        if ($('#formEmail').form('is valid')) {
+                              $("#ChagePass_ShowOTP").addClass("js-active");
+                            $("#formChageEmail").removeClass("js-active");
+                            $("#formChageOTP").addClass("js-active");
+            // AjaxApi(url = "/api/Author/SendMail?emailUser="+$('#inputChageEmail').val()
+            //    ,data= JSON.stringify({
+            //    })
+            //    ,async = true
+            //    , error = function () { notiError_SW() }
+            //    , success = function (result) {
+            //                $("#ChagePass_ShowOTP").addClass("js-active");
+            //                $("#formChageEmail").removeClass("js-active");
+            //                $("#formChageOTP").addClass("js-active");
+
+            //    }
+            //    , before = function (e) {
+            //        if(e.responseText=="1"){
+            //            num=e.responseText;
+            //                $("#ChagePass_ShowOTP").addClass("js-active");
+            //                $("#formChageEmail").removeClass("js-active");
+            //                $("#formChageOTP").addClass("js-active");
+            //            }
+            //     }
+            //);
+        };
     }
     function resetPassword(){
             AjaxApi(url = "/api/Author/ResetPassWord?emailUser="+$("#ChagePassEmail").val()+"&num="+num
