--- a/TrinhTest/Pages/Shared/_Layout.cshtml
+++ b/TrinhTest/Pages/Shared/_Layout.cshtml
@@ -159,8 +159,8 @@
             </div>
         </div>
         <div class="modal" id="DetailModal" data-bs-backdrop="static">
-            <div class="modal-dialog modal-xl bg-gray-100">
-                <div id="DetailModal_Content" class="modal-content bg-gray-100">
+            <div class="modal-dialog modal-xl">
+                <div id="DetailModal_Content" class="modal-content">
                 </div>
             </div>
         </div>
