--- a/TrinhTest/wwwroot/css/site.css
+++ b/TrinhTest/wwwroot/css/site.css
@@ -701,6 +701,13 @@ a.logo.software {
 
 }
 
+.bntAuthor:hover {
+    background-color: rgba(8, 3, 57, 0.9);
+    box-shadow: 0px 15px 20px rgba(8, 3, 57, 0.9);
+    color: #fff;
+    transform: translateY(-7px);
+}
+
 /*#region // Dropdown Semantic */
 .ui.dropdown {
     cursor: pointer;
@@ -8402,10 +8409,11 @@ textarea.form-control-lg {
 .btn-outline-dark {
   color: #344767;
   border-color: #344767; }
-  .btn-outline-dark:hover {
-    color: #fff;
-    background-color: #344767;
-    border-color: #344767; }
+    .btn-outline-dark:hover {
+        color: #fff;
+        background-color: #000;
+        border-color: #344767;
+    }
   .btn-check:focus + .btn-outline-dark, .btn-outline-dark:focus {
     box-shadow: 0 0 0 0.2rem rgba(52, 71, 103, 0.5); }
   .btn-check:checked + .btn-outline-dark,
