--- a/TrinhTest/Pages/Login/Login.cshtml
+++ b/TrinhTest/Pages/Login/Login.cshtml
@@ -51,32 +51,6 @@
                         <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column">
                             <div class="card card-plain mt-8">
                                 <div class="row px-xl-5 px-sm-4">
-                                    <div class="col-3 ms-auto px-1 flagsLogin" id="LoginFaceBook">
-                                        <a class="btn btn-outline-light w-200 active" href="javascript:;" style="margin-left:-15px">
-                                            <svg width="24px" height="32px" viewBox="0 0 64 64" version="1.1">
-                                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                                    <g transform="translate(3.000000, 3.000000)" fill-rule="nonzero">
-                                                        <circle fill="#3C5A9A" cx="29.5091719" cy="29.4927506" r="29.4882047"></circle>
-                                                        <path d="M39.0974944,9.05587273 L32.5651312,9.05587273 C28.6886088,9.05587273 24.3768224,10.6862851 24.3768224,16.3054653 C24.395747,18.2634019 24.3768224,20.1385313 24.3768224,22.2488655 L19.8922122,22.2488655 L19.8922122,29.3852113 L24.5156022,29.3852113 L24.5156022,49.9295284 L33.0113092,49.9295284 L33.0113092,29.2496356 L38.6187742,29.2496356 L39.1261316,22.2288395 L32.8649196,22.2288395 C32.8649196,22.2288395 32.8789377,19.1056932 32.8649196,18.1987181 C32.8649196,15.9781412 35.1755132,16.1053059 35.3144932,16.1053059 C36.4140178,16.1053059 38.5518876,16.1085101 39.1006986,16.1053059 L39.1006986,9.05587273 L39.0974944,9.05587273 L39.0974944,9.05587273 Z" fill="#FFFFFF"></path>
-                                                    </g>
-                                                </g>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="col-3 me-auto px-1 flagsLogin" id="LoginGoogle">
-                                        <a class="btn btn-outline-light w-200 active" href="javascript:;">
-                                            <svg width="24px" height="32px" viewBox="0 0 64 64" version="1.1">
-                                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                                    <g transform="translate(3.000000, 2.000000)" fill-rule="nonzero">
-                                                        <path d="M57.8123233,30.1515267 C57.8123233,27.7263183 57.6155321,25.9565533 57.1896408,24.1212666 L29.4960833,24.1212666 L29.4960833,35.0674653 L45.7515771,35.0674653 C45.4239683,37.7877475 43.6542033,41.8844383 39.7213169,44.6372555 L39.6661883,45.0037254 L48.4223791,51.7870338 L49.0290201,51.8475849 C54.6004021,46.7020943 57.8123233,39.1313952 57.8123233,30.1515267" fill="#4285F4"></path>
-                                                        <path d="M29.4960833,58.9921667 C37.4599129,58.9921667 44.1456164,56.3701671 49.0290201,51.8475849 L39.7213169,44.6372555 C37.2305867,46.3742596 33.887622,47.5868638 29.4960833,47.5868638 C21.6960582,47.5868638 15.0758763,42.4415991 12.7159637,35.3297782 L12.3700541,35.3591501 L3.26524241,42.4054492 L3.14617358,42.736447 C7.9965904,52.3717589 17.959737,58.9921667 29.4960833,58.9921667" fill="#34A853"></path>
-                                                        <path d="M12.7159637,35.3297782 C12.0932812,33.4944915 11.7329116,31.5279353 11.7329116,29.4960833 C11.7329116,27.4640054 12.0932812,25.4976752 12.6832029,23.6623884 L12.6667095,23.2715173 L3.44779955,16.1120237 L3.14617358,16.2554937 C1.14708246,20.2539019 0,24.7439491 0,29.4960833 C0,34.2482175 1.14708246,38.7380388 3.14617358,42.736447 L12.7159637,35.3297782" fill="#FBBC05"></path>
-                                                        <path d="M29.4960833,11.4050769 C35.0347044,11.4050769 38.7707997,13.7975244 40.9011602,15.7968415 L49.2255853,7.66898166 C44.1130815,2.91684746 37.4599129,0 29.4960833,0 C17.959737,0 7.9965904,6.62018183 3.14617358,16.2554937 L12.6832029,23.6623884 C15.0758763,16.5505675 21.6960582,11.4050769 29.4960833,11.4050769" fill="#EB4335"></path>
-                                                    </g>
-                                                </g>
-                                            </svg>
-                                        </a>
-                                    </div>
                                 </div>
                                 <div class="card-header pb-0 text-start">
                                     <h4 class="font-weight-bolder text-primary text-gradient">Welcome back</h4>
@@ -112,16 +86,31 @@
                                             <label class="form-check-label" for="rememberMe">Remember me</label>
                                         </div>
                                         <div class="text-center flagsLogin">
-                                            <button id="loginbtn" type="button" class="btn bg-gradient-dark w-100 mt-4 mb-0 position-relative" onclick="event.preventDefault();return ClickLogin()">
+                                            <button id="loginbtn" type="button" class="btn bg-gradient-dark w-100 mt-2 mb-0 position-relative disabed" onclick="event.preventDefault();return ClickLogin()">
                                                 <div id="loader" class="spinner-border spinner-border-sm"></div>
                                                 LOGIN
                                             </button>
                                         </div>
+                                        <div class="col-12 mt-3">
+                                            <div class="row">
+                                                <div class="col-sm-6">
+                                                    <button id="loginbtnFB" type="button" class="btn bntAuthor d-flex w-100 position-relative disabed" onclick="event.preventDefault();return LoginFaceBook()">
+                                                        <i class="fa fa-facebook fa-fw me-3 col-sm-3 d-flex justify-content-start" style="font-size:22px"></i>
+                                                        <span class="col-sm-9 d-flex text-center mt-1 me-2">Facebook</span>
+                                                    </button>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <button id="loginbtnGoogle" type="button" class="btn bntAuthor d-flex w-100 position-relative disabed" onclick="event.preventDefault();return loginGoogle()">
+                                                        <i class="fa fa-google-plus col-sm-3 me-3 d-flex justify-content-start" style="font-size:22px"></i>
+                                                        <span class="col-sm-9 d-flex text-center mt-1">Google</span>
+                                                    </button>
+                                                </div>
+                                            </div>
 
+                                        </div>
                                     </form>
-                                    <div id="textMessage" name="Content" style="text-align: center;height: 52px;padding-top: 24px;color: #dc3545;"></div>
-                                    <div class="card-footer text-center pt-0 px-sm-4 px-1">
-                                        <p class=" mx-auto SignInAccount">
+                                    <div class="card-footer text-center pt-2 px-sm-4 px-1">
+                                        <p class=" mx-auto" id="SignInAccount">
                                             Already have an account?
                                             <a class="text-primary text-gradient font-weight-bold">Sign in</a>
                                         </p>
@@ -129,6 +118,7 @@
                                             <a href="#" class="pe-none bg-gradient-info text-gradient font-weight-bold">Forgot Password?</a>
                                         </p>
                                     </div>
+                                    <div id="textMessage" name="Content" style="text-align: center;height: 52px;padding-top: 24px;color: #dc3545;"></div>
                                 </div>
                             </div>
                         </div>
@@ -137,6 +127,7 @@
                                 <canvas width="500" height="400" class="w-lg-100 h-lg-100 w-75 h-75 me-lg-0 me-n10 mt-lg-5"></canvas>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -154,12 +145,16 @@
     let userId=localStorage.getItem("X-UserID");
      var Token =localStorage.getItem("X-Access-Token");
     $(document).ready(function () {
-        document.getElementById('LoginGoogle').addEventListener("click", ClickLoginGoogle);
+        document.getElementById('SignInAccount').addEventListener("click", Login_RegisUser);
+         document.querySelector("#LoginResetPass").addEventListener("click",e=>{
+            ResetPassDetail();
+        });
         showTextPassWord();
         if(userId !=null && Token.length>10){
             Login_ValidateToken();
+        }else{
+            RemoveClassDisabedBnt();
         }
-        else LoginResetPassClick();
         $('.inforlogin').on('keyup', function (e) {
             var code = e.key;
             if (code === "Enter") {
@@ -168,22 +163,18 @@
         });
 
     });
-    // login oathor2 google
-    function ClickLoginGoogle(){
-        loginGoogle();
-    }
+    // login
     function ClickLogin () {
         if($('#username').val() !=null && $('#password').val() !=null){
-            $('#loader').show();
            Login_LoadInforUser();
         }
         else{
             if ($('#username').val() == '') $('#username').addClass('active').removeClass('disabled');
                 if ($('#password').val() == '') $('#password').addClass('active').removeClass('disabled');
-                $('#loginbtn').removeClass('disabed');
+
         }
     };
-
+     // login oathor2 google
     function loginGoogle(){
         var url="";
           AjaxApi(url = "/api/Author/loginGoogle"
@@ -198,70 +189,65 @@
              }
         );
     };
+    function LoginFaceBook(){
+     };
     function Login_ValidateToken(){
         $('#username').removeClass('active').addClass('disabled');
-            $('#password').removeClass('active').addClass('disabled');
-            $('#loginbtn').addClass('disabed');
-            $('#loader').show();
-          AjaxApi(url = "/api/Author/ValidateToken"
-            ,data= JSON.stringify({
-                UserID:userId
-               ,Token:Token
-               ,PublicKey:"trytry"
-            })
-            ,async = true
-            , error = function () {notiError_SW() }
-            , success = function (result) {
-            }
-            , before = function (e) {
-                let data=JSON.parse(e.responseText);
-                if(data != null)
-                {
-                    notiSuccess();
-                    window.location.href="/Dash/Dash_Master";
+        $('#password').removeClass('active').addClass('disabled');
+        $('#loader').show();
+         $.ajax({url: '/api/Author/ValidateToken',
+                type: 'POST',
+                data: JSON.stringify({
+                    'UserID':userId
+                   ,'Token':Token
+                   ,'PublicKey':"trytry"
+            }),
+            contentType: 'application/json; charset=utf-8',
+            success: function (data, textStatus, xhr) {
+                    if(data!== "[]" && data !== undefined){
+                        notiSuccess();
+                        window.location.href="/Dash/Dash_Master";
+                    }
+                    else{validateLogin();};
+                },
+                error: function (xhr, textStatus, errorThrown) {
+                    notiError_SW();
                 }
-                else
-                {
-                    validateLogin();
-                }
-             }
-        );
+            });
     };
-
     function validateLogin(){
          $('#username').addClass('active').removeClass('disabled');
             $('#password').addClass('active').removeClass('disabled');
-            $('#loginbtn').removeClass('disabed');
+            RemoveClassDisabedBnt();
             $('#loader').hide();
     };
     function Login_LoadInforUser () {
-        AjaxApi(url = "/api/Author/login"
-            ,data= JSON.stringify({
-                menu: "1",
-                IDMenu: "1",
-                flags: "0",
-                userID: $('#username').val(),
-                PassWord:$('#password').val(),
-                PassWordNew: "123"
-            })
-            ,async = true
-            , error = function () { notiError_SW() }
-            , success = function (result) {
-            }
-            , before = function (e) {
-                 $('#loader').show();
-                 if ( e.responseText !== "" && e.responseText !== undefined) {
-                  var data=JSON.parse(e.responseText);
-                  localStorage.setItem("X-PublicKey",data.PublicKey);
-                  localStorage.setItem("X-UserID",$('#username').val());
-                  localStorage.setItem("X-Access-Token",data.token);
-                  notiSuccess();
-                  window.location.href="/Dash/Dash_Master";
-                }
-                else{
+        $.ajax({url: '/api/Author/login',
+                type: 'POST',
+                data: JSON.stringify({
+                'menu': "1",
+                'IDMenu': "1",
+                'flags': "0",
+                'userID': $('#username').val(),
+                'PassWord':$('#password').val(),
+                'PassWordNew': "123"
+            }),
+            contentType: 'application/json; charset=utf-8',
+            success: function (data, textStatus, xhr) {
+                        if(data!== "[]" && data !== undefined){
+                            $('#loader').show();
+                            var res=JSON.parse(data);
+                            localStorage.setItem("X-PublicKey",res.PublicKey);
+                            localStorage.setItem("X-UserID",$('#username').val());
+                            localStorage.setItem("X-Access-Token",res.token);
+                            notiSuccess();
+                            window.location.href="/Dash/Dash_Master";
+                        };
+                },
+                error: function (xhr, textStatus, errorThrown) {
                     notiError_SW();
                 }
-             });
+            });
     };
     function showTextPassWord(){
                 $(".show_pass_icon").unbind().on("click", function () {
@@ -281,40 +267,22 @@
             })
     }
     function Login_RegisUser(){
-         AjaxApi(url = "/api/Author/RegisUser"
-            ,data= JSON.stringify({
-                menu: "1",
-                IDMenu: "1",
-                flags: "1",
-                userID: $('#username').val(),
-                PassWord:$('#password').val(),
-                PassWordNew: "123"
-            })
-            ,async = true
-            , error = function () { notiError_SW() }
-            , success = function (result) {
-                if (result != "[]") {
-                    notiSuccess();
-                   window.location.href="/Dash/Dash_Master";
-                }
-            }
-            , before = function (e) {
-
-             }
-        );
-    };  
-    function LoginResetPassClick(){
-        document.querySelector("#LoginResetPass").addEventListener("click",e=>{
-            PopUpDetail();
-        });
+         $("#DetailModal_Content").html('');
+           $("#DetailModal_Content").load("/Login/SignIn");
+           $('#DetailModal').modal('show');
+            return false;
     };
     // show popup
-    function PopUpDetail(){
+    function ResetPassDetail(){
            $("#DetailModal_Content").html('');
            $("#DetailModal_Content").load("/Login/ChangePassword");
            $('#DetailModal').modal('show');
             return false;
         };
-
+        function RemoveClassDisabedBnt(){
+             $('#loginbtn').removeClass('disabed');
+            $('#loginbtnGoogle').removeClass('disabed');
+            $('#loginbtnFB').removeClass('disabed');
+        }
 </script>
 </html>
