--- a/TrinhTest/Pages/Shared/_Layout_Login.cshtml
+++ b/TrinhTest/Pages/Shared/_Layout_Login.cshtml
@@ -8,27 +8,26 @@
         const VDMINIFY = "true";
         const VDVERSION = "6.0";
     </script>
-    <link href='/Assets/css/soft-ui-dashboard.css' rel="stylesheet" />
-    <script src="/js/Preload/preload.js"></script>
+    <link href='/css/site.css' rel="stylesheet" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="/js/Preload/basket.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/rsvp@4/dist/rsvp.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <script src="/Assests/js/ajax.min.js" type="text/javascript"></script>
-    <link href="/css/master1.css" rel="stylesheet" />
     <script src="/Assets/js/core/bootstrap.js"></script>
-    <script src="/js/Common/Popup.js"></script>
-    <script src="/js/Common/Datetime.js"></script>
-    <script src="/js/Common/noti_function.js"></script>
-    <script src="/Assests/js/ajax.js"></script>
+    <script src="/js/site.js"></script>
+    <script src="/lib/jquery-validation/dist/semantic.min.js"></script>
+    <script src="/Assets/js/plugins/datatables.js"></script>
+    <script src='/Assests/dist/Paginationjs/paginationjs.min.js'></script>
+     <script src="/Assets/js/plugins/chartjs.min.js"></script>
+     <script src="/Assests/dist/components/visibility.js"></script>
+      <script src="/Assests/dist/components/visibility.min.js"></script>
 </head>
 <body>
     <div class="modal" id="DetailModal" data-bs-backdrop="static">
-        <div class="modal-dialog modal-xl bg-gray-100">
-            <div id="DetailModal_Content" class="modal-content bg-gray-100">
+        <div class="modal-dialog modal-xl">
+            <div id="DetailModal_Content" class="modal-content">
             </div>
         </div>
     </div>
