--- a/TrinhTest/wwwroot/css/button.css
+++ b/TrinhTest/wwwroot/css/button.css
@@ -266,3 +266,10 @@
 .button[data-languagestatic="button_more"] {
 
 }
+
+.bntAuthor:hover {
+    background-color: rgba(8, 3, 57, 0.9);
+    box-shadow: 0px 15px 20px rgba(8, 3, 57, 0.9);
+    color: #fff;
+    transform: translateY(-7px);
+}
