--- a/TrinhTest/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Pages/Dash/Dash_Master.cshtml
@@ -117,7 +117,7 @@
 <script src="/Assets/js/plugins/threejs.js"></script>
 <script src="/Assets/js/plugins/orbit-controls.js"></script>
 <script src="/js/Common/initialize_setting.js"></script>
-<script type="text/javascript">
+@*<script type="text/javascript">
 
     const iconNavbarSidenav = document.getElementById('iconNavbarSidenav');
     const iconSidenav = document.getElementById('iconSidenav');
@@ -326,7 +326,7 @@
         $("#DashMedicineReport").html('');
         $("#DashMedicineReport").load("/Report/Medicine/MedicineReport");
     };
-</script>
+</script>*@
 <style>
     .navbar-vertical .navbar-nav .nav-link[data-bs-toggle=collapse][aria-expanded=true]:after {
         color: #67748e;
