--- a/TrinhTest/Pages/Login/Login.cshtml
+++ b/TrinhTest/Pages/Login/Login.cshtml
@@ -87,10 +87,16 @@
                                             </div>
 
                                         </div>
-                                        <div class="form-check form-switch">
-                                            <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
-                                            <label class="form-check-label" for="rememberMe">Remember me</label>
+                                        <div class="d-flex col-12">
+                                            <div class="form-check form-switch col-sm-7">
+                                                <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
+                                                <label class="form-check-label text-gradient bg-gradient-dark"  style="font-size: 14px" for="rememberMe">Remember me</label>
+                                            </div>
+                                        <p class="mb-2 mx-auto cursor-pointer text-end col-sm-5" id="LoginResetPass">
+                                            <a href="#" class="pe-none bg-dark text-gradient font-weight-bold" style="font-size: 14px">Forgot Password ?</a>
+                                        </p>
                                         </div>
+                                        
                                         <div class="text-center flagsLogin">
                                             <button id="loginbtn" type="button" class="btn bg-gradient-dark w-100 mt-2 mb-0 position-relative disabed" onclick="event.preventDefault();return ClickLogin()">
                                                 <div id="loader" class="spinner-border spinner-border-sm"></div>
@@ -121,12 +127,9 @@
                                         </div>
                                     </form>
                                     <div class="card-footer text-center pt-2 px-sm-4 px-1">
-                                        <p class=" mx-auto" id="SignInAccount">
+                                        <p class="mx-auto bg-gradient-dark text-gradient" id="SignInAccount">
                                             Already have an account?
-                                            <a class="text-primary text-gradient font-weight-bold">Sign in</a>
-                                        </p>
-                                        <p class="mb-4 mx-auto cursor-pointer" id="LoginResetPass">
-                                            <a href="#" class="pe-none bg-gradient-info text-gradient font-weight-bold">Forgot Password?</a>
+                                            <a class="text-primary text-gradient font-weight-bold"> Sign in</a>
                                         </p>
                                     </div>
                                     <div id="textMessage" name="Content" style="text-align: center;height: 52px;padding-top: 24px;color: #dc3545;"></div>
@@ -146,6 +149,22 @@
     </main>
     <footer class="footer py-5">
         <div class="container">
+            <div class="text-center mb-2 mt-2">
+                <a href="javascript:;" target="_blank">
+                    <i class="fa fa-map-marker text-gradient text-dark text-xs pe-1"></i>
+                    <span class="text-gradient text-dark text-xs" id="ipaddress">10.50.81.37</span>
+                </a>
+            </div>
+            <div class="row">
+                <div class="col-8 mx-auto text-center">
+                    <a class="mb-0 text-dark text-xs" href="/Login/Login">
+                        Copyright ©
+                        <script>
+                            document.write(new Date().getFullYear())
+                        </script> Trinh o2o
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
@@ -216,7 +235,7 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data, textStatus, xhr) {
                     if(data!== "[]" && data !== undefined){
-                        window.location.href="/Dash/Dash_Master";
+                       //window.location.href="/Dash/Dash_Master";
                     }
                     else{validateLogin();};
                 },
@@ -247,7 +266,7 @@
                             localStorage.setItem("X-PublicKey",res.PublicKey);
                             localStorage.setItem("X-UserID",$('#username').val());
                             localStorage.setItem("X-Access-Token",res.token);
-                            window.location.href="/Dash/Dash_Master";
+                            //window.location.href="/Dash/Dash_Master";
                         } else {notiError_SW()};
                 },
                 error: function (xhr, textStatus, errorThrown) {
