--- a/TrinhTest/Pages/Shared/_Layout.cshtml
+++ b/TrinhTest/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,9 @@
     <script src='/Assests/dist/Paginationjs/paginationjs.min.js'></script>
      <script src="/Assets/js/plugins/chartjs.min.js"></script>
      <script src="/Assests/dist/components/visibility.js"></script>
-      <script src="/Assests/dist/components/visibility.min.js"></script>
+     <script src="/Assests/dist/components/visibility.min.js"></script>
+      <script src="/Assests/dist/ColorPicker/spectrum.js"></script>
+      <link href="/Assests/dist/ColorPicker/spectrum.css" rel="stylesheet"/>
 </head>
 <body class="g-sidenav-show bg-gray-100 " id="BodyMain">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 ps ps--active-y ps--collapsing-y" id="sidenav-main">
@@ -190,8 +192,10 @@
         <script src="/Assests/dist/signalr/dist/browser/signalr.js"></script>
          <script src="/Assests/dist/components/visibility.js"></script>
       <script src="/Assests/dist/components/visibility.min.js"></script>
+       <script src="/js/Common/main.js"></script>
 <script>
     document.getElementById("LogOutUser").addEventListener("click",ClickLogOutUser);
+    localStorage.setItem("Languages",'en');
     function ClickLogOutUser(){
         localStorage.removeItem("X-UserID");
         localStorage.removeItem("X-Access-Token");
@@ -199,7 +203,225 @@
         var urlPath=window.location.href.replace(window.location.pathname,("/Login/Login" + "?first=1&ver=" + (new Date().getTime())));
         window.history.pushState('urlPath','Title', urlPath);
         window.location.reload();
-    }
+    };
+     $("#Languagesdropdown").click(function (e) {
+        if ($("#CkeckLanguages").hasClass('show')) {
+            $("#CkeckLanguages").removeClass('show');
+        }
+        else {
+            $("#CkeckLanguages").addClass('show');
+            ClickSettingLanguages();
+        }
+    });
  </script>
+ <script type="text/javascript">
+
+    const iconNavbarSidenav = document.getElementById('iconNavbarSidenav');
+    const iconSidenav = document.getElementById('iconSidenav');
+    const sidenav = document.getElementById('sidenav-main');
+    let body = document.getElementsByTagName('body')[0];
+    let className = 'g-sidenav-pinned';
+    $(document).ready(function (){
+        LoadDataMenu();
+        ShowMenuMater();
+        CloseMneuMater();
+        LoadDataUser();
+        LoadDataPriceServices();
+        LoadTempMedicineReport();
+    });
+    //Load head dashboard
+    function LoadDataUser(){
+         AjaxLoad(url = "/api/Mater/LoadDataHeardDashBoard"
+            , data = {
+            }, async = true
+           , error = function () { notiError_SW(); }
+            , success = function (result) {
+                if (result != "") {
+                    let data=JSON.parse(result);
+                    DashMasterCountUpNumber("Dash_User_Doctor",data[0].APPOINTMENT_COUNT);
+                    DashMasterCountUpNumber("Dash_Price_Patient",data[0].DOCTOR_COUNT);
+                    DashMasterCountUpNumber("Dash_User_Prescription",data[0].PATIENT_COUNT);
+                    DashMasterCountUpNumber("Dash_User_Appointment",data[0].PRESCRIPTION_COUNT);
+                    notiSuccess();
+                }
+                else{
+                    notiError_SW();
+                }
+            });
+    }
+     // execute click child node menu dash
+    function eleClickMenuDash(){
+         $("#collapse_Dashboards").addClass('show');
+         $("#parent_Dashboards").children()[0].classList.add('bg-gradient-light');
+        var ele=document.querySelectorAll('.settingCollapse');
+        ele.forEach((node) => {
+            node.addEventListener("click", e => {
+                let countClick=0;
+                if(e.target.children[1] != undefined){
+                    countClick=1;
+                }
+            if($("#collapse_"+e.target.children[countClick].innerText).hasClass("show")){
+                $("#collapse_"+e.target.children[countClick].innerText).removeClass("show");
+                document.getElementById(e.target.id).setAttribute("aria-expanded", false);
+                e.target.querySelector('div').classList.remove("bg-gradient-light");
+            }
+            else
+                {
+                    document.getElementById(e.target.id).setAttribute("aria-expanded", true);
+                    $("#collapse_"+e.target.children[countClick].innerText).addClass("show");
+                    e.target.querySelector('div').classList.add("bg-gradient-light");
+                }
+            })
+        });
+        $('#sidenav-collapse-main').on('click', '.Settingitem__item', function (e) {
+                e.preventDefault();
+                $('#sidenav-collapse-main .Settingitem__item').removeClass('active');
+                let namechild = '', namegroup = '';
+                namechild = $(this).attr("data-name");
+                $(this).addClass('active');
+                let objparent = $(this).parent().parent();
+                if (objparent != undefined) {
+                    objparent.addClass('active');
+                    namegroup = objparent.attr("data-name");
+                }
+                let href = $(this).attr('href');
+                let hreflayoutnone = href + '?layout=none' + '&ver=' + versionofWebApplication;
+                MS_UrlRoot = namegroup;
+                MS_UrlChild = namechild;
+                if (href != '#') {
+                    $.ajax({
+                        url: hreflayoutnone,
+                        success: function (data) {
+                            $("#MainRenderBody").empty();
+                            $("#MainRenderBody_Manual").html(data);
+                            console.log(hreflayoutnone)
+                            window.history.pushState(href, 'Title', hreflayoutnone);
+                           // MS_SetHeaderNavi();
+                        }
+                    })
+                }
+    });
+    }
+    function DashMasterCountUpNumber(id,valueCount){
+        if (document.getElementById(id).hasAttribute("countTo")) {
+                     document.getElementById(id).setAttribute("countTo", valueCount);
+             };
+        if (document.getElementById(id)) {
+          const countUp = new CountUp(id, document.getElementById(id).getAttribute("countTo"));
+          if (!countUp.error) {
+            countUp.start();
+          }
+        }
+    }
+    ////
+    function ExecuteText(){
+         $('#form_Career').form('validate form');
+         if ($('#accountDetail').form('is valid')) {
+         }
+    }
+    function LoadDataMenu(){
+         AjaxLoad(url = "/api/Mater/LoadDataMenu"
+            , data = {
+            }, async = true
+           , error = function () { notiError_SW(); }
+            , success = function (result) {
+                if (result != "") {
+                    let data=JSON.parse(result);
+                     RenderDataMenuMater(data,"sidenav-collapse-main");
+                     eleClickMenuDash();
+                    notiSuccess();
+                }
+                else{
+                    notiError_SW();
+                }
+            });
+    }
+    ///
+    function RenderDataMenuMater(data,id){
+        let stringContent = '';
+        for(let i=0;i<data.length;i++){
+            let item=data[i];
+            let replaceDataCollapse='';
+            if(item.Childs.length >0){
+                replaceDataCollapse='data-bs-toggle="collapse" aria-controls='+item.Name+' role="button" aria-expanded="false"'
+            }
+            let tr ='<li class="nav-item settingCollapse">'
+                    +'<a '+replaceDataCollapse+' href="#" id="parent_'+item.Name+'" class="nav-link cursor-pointer">'
+                    +'<div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center me-2">'
+                    +'<i class="'+item.Img+' text-secondary"></i>'
+                    +'</div>'
+                    +'<span class="text-dark">'+item.Name+'</span>'
+                    +'</a>'
+                    + RenderDataChildMasterMenu(item.Childs,item.Name)
+                    +'</li>';
+          stringContent=stringContent+tr;
+        }
+         document.getElementById(id).innerHTML = stringContent;
+    }
+    function RenderDataChildMasterMenu(dataChild,id){
+        let resulf  = '';
+        if(dataChild.length >0){
+            let tr ='<div class="collapse" id=collapse_'+id+'>'
+                     +'<ul class="nav ms-2 ps-3 me-2">'
+            for(let i=0;i<dataChild.length;i++){
+                var item=dataChild[i];
+                 let coll='href="' + item.Url + '"';
+                 if(dataChild[i].ChildNode.length>0){
+                     coll='data-bs-toggle="collapse" href="#"'
+                 }
+
+                tr += '<li class="nav-item cursor-pointer">'
+                    +'<a class="nav-link Settingitem__item"'+coll+'id="Layout_'+item.Name+'">'
+                    +'<span class="sidenav-normal">'+item.Name+'</span>'
+                    +'</a>'
+                    +RenderDataChildMasterMenu(dataChild[i].ChildNode,item.Name)
+                    +'</li>'
+            }
+            resulf=resulf+tr+'</ul>'+'</div>';
+        }
+        return resulf;
+    }
+    function ShowMenuMater(){
+        if (iconNavbarSidenav) {
+            iconNavbarSidenav.addEventListener("click", toggleSidenav);
+        }
+    }
+    function CloseMneuMater(){
+        if (iconSidenav) {
+            iconSidenav.addEventListener("click", toggleSidenav);
+        }
+    }
+    function PopUpDetail(){
+            $("#DetailModal_Content").html('');
+            $("#DetailModal_Content").load("/Login/ChangePassword");
+            $('#DetailModal').modal('show');
+            return false;
+    }
+    function toggleSidenav() {
+        if (body.classList.contains(className)) {
+        body.classList.remove(className);
+        setTimeout(function() {
+            sidenav.classList.remove('bg-white');
+        }, 100);
+        sidenav.classList.remove('bg-transparent');
+
+        } else {
+        body.classList.add(className);
+        sidenav.classList.add('bg-white');
+        sidenav.classList.remove('bg-transparent');
+        iconSidenav.classList.remove('d-none');
+        }
+    };
+    //LoadDataPriceServices
+    function LoadDataPriceServices(){
+         $("#DashPriceServices").html('');
+          $("#DashPriceServices").load("/Setting/Services/SettingPriceServices");
+       };
+    //LoadTempMessages chatbots
+    function LoadTempMedicineReport(){
+        $("#DashMedicineReport").html('');
+        $("#DashMedicineReport").load("/Report/Medicine/MedicineReport");
+    };
+</script>
 </body>
 </html>
