--- a/TrinhTest/Pages/Error/Error500.cshtml
+++ b/TrinhTest/Pages/Error/Error500.cshtml
@@ -1,13 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@page
 @{
-}
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-     Layout = "~/Views/Shared/_Layout_Login.cshtml";
+     Layout = "~/Pages/Shared/_Layout_Login.cshtml";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -26,7 +19,7 @@
                         <button type="button" class="btn bg-gradient-dark mt-4" id="BackGoToPageLogin">Go to Homepage</button>
                     </div>
                     <div class="col-lg-6 my-auto position-relative">
-                        <img class="w-100 position-relative" src="../../../assets/img/illustrations/error-500.png" alt="500-error">
+                        <img class="w-100 position-relative" src="Assets/img/illustrations/error-500.png" alt="500-error">
                     </div>
                 </div>
             </div>
