--- a/TrinhTest/Pages/Error/Error404.cshtml
+++ b/TrinhTest/Pages/Error/Error404.cshtml
@@ -1,8 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@page
 @{
-     Layout = "~/Views/Shared/_Layout_Login.cshtml";
+     Layout = "~/Pages/Shared/_Layout_Login.cshtml";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -21,7 +19,7 @@
                         <a href="~/Login/Login">Go To Homepage</a>
                     </div>
                     <div class="col-lg-6 my-auto position-relative">
-                        <img class="w-100 position-relative" src="Assets/img/illustrations/error-404.png" alt="404-error">
+                        <img class="w-100 position-relative" src="/Assets/img/illustrations/error-404.png" alt="404-error">
                     </div>
                 </div>
             </div>
@@ -86,7 +84,7 @@ $<script>
 function ErronrGoHome() {
     let userId=localStorage.getItem("X-UserID");
     window.history.back();
-   window.location.href="@Url.Action("DashBoards", "Home")"+"?CurrentID="+window.btoa(userId);
+   window.location.href="/Dash/Dash_Master"+"?CurrentID="+window.btoa(userId);
 }
 </script>
 </html>
