--- a/TrinhTest/Pages/Setting/SettingScheduleStatus.cshtml
+++ b/TrinhTest/Pages/Setting/SettingScheduleStatus.cshtml
@@ -24,8 +24,8 @@
                 <div class="card-body p-3 pt-2">
                     <div class="row col-12 d-flex">
                         <div class="col-12 col-xl-5 p-1 me-0">
-                            <div class="card me-2">
-                                <div class="card-header pb-0">
+                            <div class="card me-2 box-shadow-card">
+                                <div class="p-4 pb-0">
                                     <div class="d-lg-flex">
                                         <div class="w-50 col-auto my-auto">
                                             <div class="h-100">
@@ -45,9 +45,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card col-12 col-xl-7 p-1">
+                        <div class="card col-12 col-xl-7 p-1 box-shadow-card">
                             <div class="col-12 d-none p-1" id="setting_popup">
-                                <div class="card-header p-3 pb-0">
+                                <div class="p-4 pb-0">
                                     <div class="d-lg-flex">
                                         <div class="w-50 col-auto my-auto">
                                             <div class="h-100">
@@ -117,7 +117,7 @@
                                 </div>
                             </div>
                             <div class="col-12" id="SS_Status_Detail">
-                                <div class="card-header mt-1 pb-0">
+                                <div class="p-4 pb-0">
                                     <div class="d-lg-flex">
                                         <div class="w-50 col-auto my-auto">
                                             <div class="h-100">
@@ -156,6 +156,7 @@
     var DataScheduleStatus = {};
     var StatusCurrentID =2;
     $(document).ready(function () {
+        //Promise.any(window.location.href="/Error/Error404").then();
         $("#SS_Color").spectrum({
             showPaletteOnly: true,
             togglePaletteOnly: true,
@@ -232,7 +233,6 @@
             Schedule_Status_Render_Status_Follow("page_status_follow");
         });
         $("#page_status_follow").on("click", '.button_disabled', function () {
-            console.log("ok")
             let parent = $(this).parent(".page_status_check_item");
             let parentedit = $(this).parent(".page_status_check_item .button_disabled");
             let height_item = $("#page_status_follow .page_status_check_item:first-child").outerHeight();
@@ -390,10 +390,8 @@
         $("#page_status_follow").unbind('sortable').sortable({
             items: ".page_status_check_item:not(.disabled)",
             start: function (event, ui) {
-                console.log('1')
             },
             stop: function (event, ui) {
-                console.log('2')
             }
         });
     };
@@ -472,5 +470,8 @@
         height: auto !important;
         border-radius: 0.5rem;
         transition: box-shadow 0.15s ease, border-color 0.15s ease;
+    }
+    .box-shadow-card{
+        box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 0px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
     }
 </style>
