--- a/TrinhTest/wwwroot/css/master1.css
+++ b/TrinhTest/wwwroot/css/master1.css
@@ -410,7 +410,7 @@ select.ui.dropdown {
 
     .ui.selection.active.dropdown .menu {
         border-color: #dee2e6 !important;
-        box-shadow: 0px 2px 3px 0px rgb(34 36 38 / 15%) !important;
+        /*box-shadow: 0px 2px 3px 0px rgb(34 36 38 / 15%) !important;*/
     }
 
 /* Focus */
@@ -588,7 +588,7 @@ select.ui.dropdown {
     font-size: 1em;
     padding: 0.35714286em 0.71428571em;
     margin: 0.21428571em 0.28571429rem 0.21428571em 0em;
-    box-shadow: 0px 0px 0px 1px rgb(34 36 38 / 15%) inset;
+    /*box-shadow: 0px 0px 0px 1px rgb(34 36 38 / 15%) inset;*/
     display: inline-block;
     vertical-align: middle;
     border-radius: 20px;
